<resources>
    <string name="app_name">APass</string>
    <string name="facebook_app_id" translatable="false">825455870923268</string>
    <string name="resource_name">Record Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="findString">Search</string>
    <string name="no_matching_records_found">No Records Matching \"%s\" Were Found.</string>
    <string name="button_save">Save</string>
    <string name="button_find_resource">Find</string>
    <string name="button_new_resource">New Record…</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_email_csv_file">Email CSV File</string>
    <string name="action_advanced">Advanced…</string>
    <string name="action_save_encrypted_file">Save Encrypted File…</string>
    <string name="action_load_encrypted_file">Load Encrypted File…</string>
    <string name="action_change_login">Change Login…</string>
    <string name="action_remove_ads">Remove Ads…</string>
    <string name="action_show_splash">About…</string>
    <string name="action_add_resource">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="export_exported_value_count">Exported %1$d records to %2$s</string>
    <string name="export_email_address_missing">ERROR: There is no email address for user [%s].  USING DEFAULT EMAIL ADDRESS.</string>
    <string name="login_title">Login to APass</string>
    <string name="login_username_hint">User Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_remember_my_username">Remember my User Name?</string>
    <string name="login_show_password_hint">Show Password Hint</string>
    <string name="login_signup_for_apass">Sign Up for APass</string>
    <string name="login_display_password_hint">Password Hint: [%s]</string>
    <string name="login_password_hint_enter_valid_username">Please specify valid User Name.</string>
    <string name="logged_in_as_message">Logged in as [%s]</string>
    <string name="new_title">New</string>
    <string name="new_saved_successfully">Saved [%s]</string>
    <string name="edit_title">Edit</string>
    <string name="edit_resource_updated">Updated Resource [%s]</string>
    <string name="edit_resource_deleted">Deleted Resource [%s]</string>
    <string name="edit_resource_not_deleted">Resource [%s] NOT DELETED.</string>
    <string name="register_create_login_title">Create APass Login</string>
    <string name="register_username_hint">User Name</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_password_hint_hint">Password Hint</string>
    <string name="register_email_hint">Email</string>
    <string name="register_confirm_email_hint">Confirm Email</string>
    <string name="register_password_and_confirm_do_not_match">Password and Confirmation do not match!  Please re-enter.</string>
    <string name="register_fields_must_be_completed">All fields must be completed.  Please try again.</string>
    <string name="register_user_already_exists">User Name [%s] already exists.  Please try again.</string>
    <string name="register_user_was_not_created">USER NAME [%s] WAS NOT CREATED.  Please try again.</string>
    <string name="splash_version">version:</string>
    <string name="change_registration_title">Change Login Info</string>
    <string name="change_registration_username_hint">User Name</string>
    <string name="change_registration_change_email_text">Change Email</string>
    <string name="change_registration_change_username_button_text">Change Username</string>
    <string name="change_registration_username_already_exists">Cannot change. Username already exists.</string>
    <string name="change_registration_change_username_successful">Username changed successfully.</string>
    <string name="change_registration_change_email_successful">Email changed successfully.</string>
    <string name="change_registration_change_username_dialog_button_ok">OK</string>
    <string name="change_registration_change_password_dialog_button_ok">OK</string>
    <string name="change_registration_change_username_dialog_button_cancel">Cancel</string>
    <string name="change_registration_change_password_dialog_button_cancel">Cancel</string>
    <string name="change_registration_change_password_text">Change Password</string>
    <string name="change_registration_password_hint">Password</string>
    <string name="change_registration_old_password_hint">Old Password</string>
    <string name="change_registration_new_password_hint">New Password</string>
    <string name="change_registration_confirm_new_password_hint">Confirm New Password</string>
    <string name="change_registration_password_hint_hint">Password Hint</string>
    <string name="change_registration_email_hint">Email</string>
    <string name="change_registration_confirm_email_hint">Confirm Email</string>
    <string name="change_registration_username_password_invalid">Username and Password must be valid!</string>
    <string name="change_registration_password_confirm_do_not_match">New Password and Confirmation do not match!  Please re-enter.</string>
    <string name="change_registration_password_hint_new_password">New Password Hint must be specified for New Password.</string>
    <string name="change_registration_email_confirm_do_not_match">New Email and Confirmation do not match!  Please re-enter.</string>
    <string name="change_registration_username_not_updated">USER NAME [%s] WAS NOT UPDATED.  Please try again.</string>
    <string name="change_registration_username_updated_successfully">USERNAME [%s] WAS UPDATED SUCCESSFULLY!</string>
    <string name="change_registration_password_update_successful">PASSWORD WAS UPDATED SUCCESSFULLY!</string>
    <string name="change_registration_password_update_failed">PASSWORD WAS NOT UPDATED.  Please try again.</string>
    <string name="unencrypted_risk_dialog_title">SECURITY WARNING</string>
    <string name="unencrypted_risk_dialog_message">Unencrypted CSV files may pose a security risk if accessible to hackers.  Do you wish to continue anyway?</string>
    <string name="unencrypted_risk_dialog_positive_button_text">Accept Risk and Continue</string>
    <string name="unencrypted_risk_dialog_negative_button_text">Cancel</string>
    <string name="unencrypted_risk_dialog_user_declined_message">Action Canceled.  No unencrypted CSV file was created.</string>
    <string name="unencrypted_risk_dialog_user_accepted_message">Unencrypted CSV File Risk Accepted.  Sending.</string>
    <string name="overwrite_data_dialog_title">OVERWRITE DATA WARNING</string>
    <string name="overwrite_data_dialog_message">Loading data will DISCARD EXISTING RECORDS.  You may wish to create a backup file first.  Do you wish to continue?</string>
    <string name="overwrite_data_dialog_positive_button_text">I Understand, Please Continue</string>
    <string name="overwrite_data_dialog_negative_button_text">Cancel</string>
    <string name="overwrite_data_dialog_user_declined_message">Data Load Canceled.  No changes have been made.</string>
    <string name="overwrite_data_dialog_user_accepted_message">User chose to import, all existing records were discarded.</string>
    <string name="list_default_value">List Default Value</string>
    <string name="delete_resource_dialog_positive_button_text">OK</string>
    <string name="delete_resource_dialog_negative_button_text">Cancel</string>
    <string name="delete_resource_confirm_title">Confirm Delete…</string>
    <string name="delete_resource_confirm_message">Are you sure you want to delete this?</string>
    <string name="airanza_url">&lt;a href="http://www.airanza.com"&gt;www.airanza.com&lt;/a&gt;</string>
    <string name="terms_of_use_url">&lt;a href="http://www.airanza.com/products/apass/tou"&gt;Terms of Use&lt;/a&gt;</string>
    <string name="privacy_policy_url">&lt;a href="http://www.airanza.com/products/apass/privacy"&gt;Privacy Policy&lt;/a&gt;</string>
    <string name="file_saved_successfully">File %s Saved Successfully!"</string>
    <string name="file_save_failed">FILE %1$s SAVE FAILED: %2$s</string>
    <string name="file_loaded_successfully">File %s Loaded Successfully</string>
    <string name="file_load_failed">FILE %1$s LOAD FAILED: %2$s</string>
    <string name="email_encrypted_file_subject">APass Backup File</string>
    <string name="email_encrypted_file_body">Backup of Entries in APass.</string>
    <string name="email_encrypted_file_attaching">ATTACHING: %s</string>
    <string name="email_encrypted_file_attachment_error">ATTACHMENT ERROR!  Exists: [%1$b] canRead: [%2$b].</string>
    <string name="email_encrypted_file_no_email_clients_configured">There are no email clients installed.</string>
    <string name="admob_id" translatable="false">pub-6141378478306258</string>
    <string name="main_activity_top_banner_ad_unit_id" translatable="false">ca-app-pub-6141378478306258/9235092323</string>
    <string name="main_activity_bottom_banner_ad_unit_id" translatable="false">ca-app-pub-6141378478306258/7618758328</string>
    <string name="edit_activity_bottom_banner_ad_unit_id" translatable="false">ca-app-pub-6141378478306258/9095491524</string>
    <string name="new_activity_bottom_banner_ad_unit_id" translatable="false">ca-app-pub-6141378478306258/4525691123</string>
    <string name="main_activity_interstitial_ad_unit_id" translatable="false">ca-app-pub-6141378478306258/2165351127</string>
    <string name="test_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="primary_android_admob_test_device" translatable="false">03E2E4F5EE38F1A8EF3355F642CCBA94</string>
    <string name="login_remember_user_name_hint">Remember my User Name?</string>
    <string name="apprater_rate_title">Rate %s</string>
    <string name="apprater_rate_message">If you enjoy using %s, would you mind taking a moment to rate it?  Thanks for your support!</string>
    <string name="apprater_rate_now">Yes, Rate %s</string>
    <string name="apprater_rate_later">Remind me Later</string>
    <string name="apprater_rate_cancel">No, Thanks</string>
    <string name="apprater_market_url" translatable="false">market://details?id=%s</string>
    <string name="iap_purchase_successful">Purchase successful.</string>
    <string name="iap_turn_off_ads_already_purchased">No need to turn off ads, as they are already turned off!</string>
    <string name="iap_failed_to_query_inventory">Failed to query inventory: </string>
    <string name="iap_error_purchasing">Error purchasing: </string>
    <string name="iap_error_purchasing_authentication">"Error purchasing. Authenticity verification failed."</string>
    <string name="iap_turn_off_ads_thank_you">Thank you for upgrading to "No Ads"</string>
    <string name="iap_billing_setup_problem">Problem setting up In-App Billing: </string>
</resources>