<!--
  ~ Copyright (c) 2015.
  ~
  ~ AIRANZA, INC.
  ~ _____________
  ~   [2015] - [${YEAR}] Adobe Systems Incorporated
  ~   All Rights Reserved.
  ~
  ~  NOTICE:  All information contained herein is, and remains
  ~  the property of Airanza, Inc. and its suppliers,
  ~  if any.  The intellectual and technical concepts contained
  ~  herein are proprietary to Airanza Inc.
  ~  and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  patents in process, and are protected by trade secret or copyright law
  ~
  ~  Dissemination of this information or reproduction of this material
  ~  is strictly forbidden unless prior written permission is obtained
  ~  from Airanza Inc.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_email_backup" android:title="@string/action_email_csv_file"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_advanced_menu" android:title="@string/action_advanced"
        android:orderInCategory="100" app:showAsAction="never">
    <menu>
        <item android:id="@+id/action_database_backup" android:title="@string/action_save_encrypted_file"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/action_database_restore" android:title="@string/action_load_encrypted_file"
            android:orderInCategory="100" app:showAsAction="never" />
    </menu>
    </item>
    <item android:id="@+id/action_change_login" android:title="@string/action_change_login"
        android:orderInCategory="100" app:showAsAction="never" />
    <group>
        <item android:id="@+id/action_show_splash" android:title="@string/action_show_splash"
            android:orderInCategory="100" app:showAsAction="never" />
    </group>


</menu>
