<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_resource"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/radial_gradient"
    android:orientation="horizontal" >

    <TextView
        android:layout_weight="0"
        android:id="@+id/_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="_id" />
    <EditText
        android:layout_weight="0"
        android:id="@+id/resource_name"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/resource_name"
        >
        <requestFocus />
    </EditText>

    <EditText
        android:layout_weight="0"
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
    />

    <LinearLayout>
    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@android:drawable/ic_menu_view"
            android:onClick="onClickOnPassword"
            android:layout_gravity="right"
            android:background="@layout/white_border"
            />
    </LinearLayout>
    <EditText
        android:layout_weight="0"
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        />

</TableLayout>
