<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ AIRANZA, INC.
  ~ _____________
  ~   [2015] - [${YEAR}] Adobe Systems Incorporated
  ~   All Rights Reserved.
  ~
  ~  NOTICE:  All information contained herein is, and remains
  ~  the property of Airanza, Inc. and its suppliers,
  ~  if any.  The intellectual and technical concepts contained
  ~  herein are proprietary to Airanza Inc.
  ~  and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  patents in process, and are protected by trade secret or copyright law
  ~
  ~  Dissemination of this information or reproduction of this material
  ~  is strictly forbidden unless prior written permission is obtained
  ~  from Airanza Inc.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_change_registration"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/radial_gradient">

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            >
            <!-- User Name & change button -->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">
            <TextView android:id="@+id/change_reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username_hint"
                android:singleLine="true"
                android:layout_alignBaseline="@+id/change_reg_change_username_button"
                android:textSize="16dp"
                android:textColor="#ffffffff" />
                <Button
                    android:id="@+id/change_reg_change_username_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="false"
                    android:text="@string/change_registration_change_username_button_text"
                    android:onClick="onChangeUsernameRequested">
                </Button>
            </RelativeLayout>
            <!-- Password -->
            <EditText android:id="@+id/change_reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:hint="@string/change_registration_password_hint"
                android:layout_marginTop="5dip"/>

            <!-- New Password -->
            <EditText android:id="@+id/change_reg_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:hint="@string/change_registration_new_password_hint"
                />

            <!-- Confirm New Password -->
            <EditText android:id="@+id/change_reg_confirm_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:hint="@string/change_registration_confirm_new_password_hint"
                android:layout_marginTop="5dip"/>

            <!-- Password Hint -->
            <EditText android:id="@+id/change_reg_password_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/change_registration_password_hint_hint"
                android:layout_marginTop="5dip"/>

            <!--  Email -->
            <EditText android:id="@+id/change_reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/change_registration_email_hint"
                />

            <!--  Confirm Email -->
            <EditText android:id="@+id/change_reg_confirm_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/change_registration_confirm_email_hint"
                android:layout_marginBottom="20dip"/>

        </LinearLayout>
        <!-- Registration Form Ends -->

        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@layout/footer_center_logo"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->

    </RelativeLayout>
</ScrollView>
