<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ AIRANZA, INC.
  ~ _____________
  ~   [2015] - [${YEAR}] Adobe Systems Incorporated
  ~   All Rights Reserved.
  ~
  ~  NOTICE:  All information contained herein is, and remains
  ~  the property of Airanza, Inc. and its suppliers,
  ~  if any.  The intellectual and technical concepts contained
  ~  herein are proprietary to Airanza Inc.
  ~  and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  patents in process, and are protected by trade secret or copyright law
  ~
  ~  Dissemination of this information or reproduction of this material
  ~  is strictly forbidden unless prior written permission is obtained
  ~  from Airanza Inc.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/radial_gradient">

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            >
            <!-- User Name -->
            <EditText android:id="@+id/reg_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/register_username_hint"
                android:singleLine="true" />

            <!-- Password -->
            <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:hint="@string/register_password_hint"
                android:layout_marginTop="5dip"/>

            <!-- Confirm Password -->
            <EditText android:id="@+id/reg_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:hint="@string/register_confirm_password_hint"
                android:layout_marginTop="5dip"/>

            <!-- New Password -->
            <EditText android:id="@+id/reg_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:enabled="false"
                android:hint="@string/register_new_password_hint"
                android:visibility="invisible"/>

            <!-- Confirm New Password -->
            <EditText android:id="@+id/reg_confirm_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:enabled="false"
                android:hint="@string/register_confirm_new_password_hint"
                android:visibility="invisible"/>

            <!-- Password Hint -->
            <EditText android:id="@+id/reg_password_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/register_password_hint_hint"
                android:layout_marginTop="5dip"/>

            <!--  Email -->
            <EditText android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/register_email_hint"
                android:layout_marginBottom="20dip"/>

            <!-- Link to Login Screen -->
            <TextView android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Already has account! Login here"
                android:gravity="center"
                android:textSize="20dip"
                />
            <!--android:layout_marginTop="40dip"-->
            <!--android:layout_marginBottom="40dip"-->
        </LinearLayout>
        <!-- Registration Form Ends -->

        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@layout/footer_center_logo"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->

    </RelativeLayout>
</ScrollView>
